<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sendButton"
            android:icon="@drawable/restaurant"
            android:title="@string/restauraunt" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/menu"
            android:title="@string/menu" />
        <item
            android:id="@+id/orderFragment"
            android:icon="@drawable/history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>